fixed padding on descript text, clipped text to 4 lines

--- a/style.scss
+++ b/style.scss
@@ -251,7 +251,7 @@ ul {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     text-overflow: ellipsis;
-    padding-right: 10px;
+    padding-right: 15px;
   }
 }
 
